--- a/templates/test.html
+++ b/templates/test.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Corona Admin</title>
+    <title>Skylink Container</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='vendors/mdi/css/materialdesignicons.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='vendors/css/vendor.bundle.base.css') }}">
@@ -15,12 +15,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='vendors/owl-carousel-2/owl.carousel.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='vendors/owl-carousel-2/owl.theme.default.min.css') }}">
     <!-- End plugin css for this page -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='vendors/select2/select2.min.css') }}">
     <!-- inject:css -->
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo.png') }}" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -149,20 +150,20 @@
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-          <a class="sidebar-brand brand-logo" href="index.html"><img src="assets/images/logo.svg" alt="logo" /></a>
-          <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
+          <a class="sidebar-brand brand-logo" href="/panel"><img src="{{ url_for('static', filename='images/logo.png') }}" alt="logo" /></a>
+          <a class="sidebar-brand brand-logo-mini" href="/panel"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
         </div>
         <ul class="nav">
           <li class="nav-item profile">
             <div class="profile-desc">
               <div class="profile-pic">
                 <div class="count-indicator">
-                  <img class="img-xs rounded-circle " src="assets/images/faces/face15.jpg" alt="">
+                  <img class="img-xs rounded-circle " src="https://avatars.githubusercontent.com/u/156548013?v=4" alt="">
                   <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
-                  <h5 class="mb-0 font-weight-normal">Henry Klein</h5>
-                  <span>Gold Member</span>
+                  <h5 class="mb-0 font-weight-normal">{{session["user_name"]}}</h5>
+                  <span>{{session["user_type"]}}</span>
                 </div>
               </div>
               <a href="#" id="profile-dropdown" data-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
@@ -206,13 +207,22 @@
             <span class="nav-link">Panel</span>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="/panel">
               <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
               </span>
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
+          <li class="nav-item menu-items">
+            <a class="nav-link" href="/container">
+              <span class="menu-icon">
+                <i style="color:aqua" class="mdi mdi-dropbox"></i>
+              </span>
+              <span class="menu-title">Containers</span>
+            </a>
+          </li>
+          
           <li class="nav-item nav-category">
             <span class="nav-link">İtems</span>
           </li>
@@ -276,7 +286,7 @@
 
           <li class="nav-item menu-items">
             <center>
-              <button type="button" class="menu-title btn btn-inverse-success btn-fw" onclick="saveButtons('{{ session['auth_key'] }}', '{{container_data[2]}}')" >Save</button>
+              <button type="button" class="menu-title btn btn-inverse-success btn-fw" onclick="saveButtons('{{ session['auth_key'] }}', '{{container_data[2]}}','{{session['user_id']}}')" >Save</button>
             </center>
           </li>
          
@@ -284,6 +294,40 @@
       </nav>
       <!-- partial -->
       <div class="container-fluid page-body-wrapper">
+        <div class="modal fade" id="panelModal" tabindex="-1" role="dialog" aria-labelledby="panelModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="panelModalLabel">sa</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                  <label for="message-text" class="col-form-label">Project Name:</label>
+                  <textarea class="form-control" name="modalProjectName" id="modalProjectName"></textarea>
+                  <textarea class="form-control" name="modalType" id="modalType" hidden="hidden"></textarea>
+                  <br>
+                  <div class="form-group">
+                      <label>Device Type</label>
+                     
+                      <select id="projectType" name="projectType" class="js-example-basic-single select2-hidden-accessible" style="width:100%" data-select2-id="1" tabindex="-1" aria-hidden="true">
+                        <option value="N8266" data-select2-id="3">Nodemcu 8266</option>
+                        <option value="AU">Arduino Uno</option>
+                   
+                      </select>
+                    </div>
+
+                </div>
+              </div>
+                  <div class="modal-footer">
+                  <button type="button" id="modalclose" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" onclick="confirmProject()" class="btn btn-primary">Create</button>
+                  </div>
+            </div>
+          </div>
+        </div>
         <!-- partial:partials/_navbar.html -->
         <nav class="navbar p-0 fixed-top d-flex flex-row">
           <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
@@ -306,14 +350,14 @@
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="createbuttonDropdown">
                   <h6 class="p-3 mb-0">Projects</h6>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
+                  <a class="dropdown-item preview-item" onclick="devicemodal('iot') " data-toggle="modal" data-target="#panelModal">
                     <div class="preview-thumbnail">
                       <div class="preview-icon bg-dark rounded-circle">
                         <i class="mdi mdi-file-outline text-primary"></i>
                       </div>
                     </div>
                     <div class="preview-item-content">
-                      <p class="preview-subject ellipsis mb-1">Software Development</p>
+                      <p class="preview-subject ellipsis mb-1" >IoT</p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
@@ -347,47 +391,7 @@
                   <i class="mdi mdi-view-grid"></i>
                 </a>
               </li>
-              <li class="nav-item dropdown border-left">
-                <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
-                  <i class="mdi mdi-email"></i>
-                  <span class="count bg-success"></span>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
-                  <h6 class="p-3 mb-0">Messages</h6>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                      <img src="assets/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic">
-                    </div>
-                    <div class="preview-item-content">
-                      <p class="preview-subject ellipsis mb-1">Mark send you a message</p>
-                      <p class="text-muted mb-0"> 1 Minutes ago </p>
-                    </div>
-                  </a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                      <img src="assets/images/faces/face2.jpg" alt="image" class="rounded-circle profile-pic">
-                    </div>
-                    <div class="preview-item-content">
-                      <p class="preview-subject ellipsis mb-1">Cregh send you a message</p>
-                      <p class="text-muted mb-0"> 15 Minutes ago </p>
-                    </div>
-                  </a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                      <img src="assets/images/faces/face3.jpg" alt="image" class="rounded-circle profile-pic">
-                    </div>
-                    <div class="preview-item-content">
-                      <p class="preview-subject ellipsis mb-1">Profile picture updated</p>
-                      <p class="text-muted mb-0"> 18 Minutes ago </p>
-                    </div>
-                  </a>
-                  <div class="dropdown-divider"></div>
-                  <p class="p-3 mb-0 text-center">4 new messages</p>
-                </div>
-              </li>
+              
               <li class="nav-item dropdown border-left">
                 <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
                   <i class="mdi mdi-bell"></i>
@@ -438,8 +442,8 @@
               <li class="nav-item dropdown">
                 <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
                   <div class="navbar-profile">
-                    <img class="img-xs rounded-circle" src="assets/images/faces/face15.jpg" alt="">
-                    <p class="mb-0 d-none d-sm-block navbar-profile-name">Henry Klein</p>
+                    <img class="img-xs rounded-circle" src="https://avatars.githubusercontent.com/u/156548013?v=4" alt="">
+                    <p class="mb-0 d-none d-sm-block navbar-profile-name">{{session["user_name"]}}</p>
                     <i class="mdi mdi-menu-down d-none d-sm-block"></i>
                   </div>
                 </a>
@@ -457,7 +461,7 @@
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
+                  <a href="/logout" class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
                       <div class="preview-icon bg-dark rounded-circle">
                         <i class="mdi mdi-logout text-danger"></i>
@@ -583,8 +587,7 @@
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
             <div class="d-sm-flex justify-content-center justify-content-sm-between">
-              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
-              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin templates</a> from Bootstrapdash.com</span>
+              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © Skyfetch 2024</span>
             </div>
           </footer>
           <!-- partial -->
@@ -599,11 +602,8 @@
     <script src="{{ url_for('static', filename='vendors/js/vendor.bundle.base.js') }}"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
-    <script src="{{ url_for('static', filename='vendors/chart.js/Chart.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendors/progressbar.js/progressbar.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendors/jvectormap/jquery-jvectormap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendors/jvectormap/jquery-jvectormap-world-mill-en.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendors/owl-carousel-2/owl.carousel.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendors/select2/select2.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendors/typeahead.js/typeahead.bundle.min.js') }}"></script>
     <!-- End plugin js for this page -->
     <!-- inject:js -->
     <script src="{{ url_for('static', filename='js/off-canvas.js') }}"></script>
@@ -613,16 +613,18 @@
     <script src="{{ url_for('static', filename='js/todolist.js') }}"></script>
     <!-- endinject -->
     <!-- Custom js for this page -->
-    <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
-    <!-- End custom js for this page -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/file-upload.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/typeahead.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/select2.js') }}"></script>
     <script>
       var kfZpM9C3 = "{{session['auth_key']}}";
+      var kfZpM9C4 = "{{container_data[2]}}";
+
       var cZ3pi4AzfC = "{{session['user_id']}}";
 
   </script>
     <script src="{{ url_for('static', filename='js/handler.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/panel-handler.js')}}"></script>
 
   </body>
 </html>
